fix: Fix the app component bug that sometimes scrolling does not work on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,6 +22,7 @@
     margin-top: $NAV_HEIGHT;
     display: block;
     width: 100%;
+    overflow: hidden;
     height: calc(100% - #{$NAV_HEIGHT});
   }
 }
